Bluewolf SFMTA/src/objects/Stop_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>STL_Days_of_Operation__c</fullName>
        <defaultValue>22</defaultValue>
        <inlineHelpText>How many days are your shuttles running this month?</inlineHelpText>
        <label>Days of Operation</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_Month_of_Operation__c</fullName>
        <label>Month of Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Aug 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan 2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb 2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar 2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr 2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun 2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2018</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_Operation_Month__c</fullName>
        <formula>CASE((MONTH(DATEVALUE(CreatedDate)) + 1),
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
13, &quot;January&quot;,
&quot;&quot;)

+ &quot; &quot; +

IF(MONTH(DATEVALUE(CreatedDate) +1) &lt; 13, TEXT(YEAR(DATEVALUE(CreatedDate))), TEXT(YEAR(DATEVALUE(CreatedDate)) + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operation Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Operator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stop Events</relationshipLabel>
        <relationshipName>Stop_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STL_StopScheduleKey__c</fullName>
        <label>StopScheduleKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>STL_Total_Stops_per_Day__c</fullName>
        <description>How many total stop events are scheduled to occur across all shuttles and locations</description>
        <inlineHelpText>How many total stop events are scheduled to occur across all shuttles and locations</inlineHelpText>
        <label>Total Stops per Day</label>
        <summarizedField>Stop_Junction__c.Stops_per_Month__c</summarizedField>
        <summaryForeignKey>Stop_Junction__c.Stop_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>STL_Total_Stops_per_Month__c</fullName>
        <formula>STL_Total_Stops_per_Day__c * STL_Days_of_Operation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stops per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stop Event</label>
    <nameField>
        <label>Schedule Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stop Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>